# system-nnn-translator

./: .gitignore  7shi-gemma-2-jpn-translate  7shi-llama-translate  CMakeLists.txt  Modelfile  README.md  azure-translate.cpp  decode.cpp  exe-font-patcher.cpp  extract-images.cpp  extract.cpp  formatter.cpp  inject.cpp  ollama-generate-charaname.cpp  ollama-translate.cpp  vcpkg.json
